gitops/apps/jellyfin-route/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
subsets:
  - addresses:
      - ip: 10.254.0.3
    ports:
      - port: 8096
