gitops/apps/jellyfin-route/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
    - port: 8096
      targetPort: 8096
